--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 	<link rel='stylesheet' href='./build/bundle.css'>
 
 	<script defer src='./build/bundle.js'></script>
+	<script src="https://kit.fontawesome.com/abbe3eabbd.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
